--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon-32x32.png" type="image/x-icon" /> 
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" >
-    <script src="js/script.js"  charset="utf-8" defer></script>
+    <script src="js/script.js" defer></script>
     <title>Expense Chart</title>
   </head>
   <body>
