--- a/index.html
+++ b/index.html
@@ -28,28 +28,28 @@
     <h2>Summary</h2>
     <section class="summary">
       <div class="item">
-        <img src="assets/images/icon-reaction.svg" />
+        <img src="assets/images/icon-reaction.svg" alt="thunder"/>
         <h3 class="reaction">Reaction</h3>
         <p>
           <span>80</span> / 100
         </p>
       </div>
       <div class="item memory">
-        <img src="assets/images/icon-memory.svg" />
+        <img src="assets/images/icon-memory.svg" alt="brain"/>
         <h3 class="memory">Memory</h3>
         <p>
           <span>80</span> / 100
         </p>
       </div>
       <div class="item last">
-        <img src="assets/images/icon-verbal.svg" />
+        <img src="assets/images/icon-verbal.svg" alt="Chat"/>
         <h3 class="verbal">Verbal</h3>
         <p>
           <span>80</span> / 100
         </p>
       </div>
       <div class="item last">
-        <img src="assets/images/icon-visual.svg" />
+        <img src="assets/images/icon-visual.svg" alt="Eye"/>
         <h3 class="visual">Visual</h3>
         <p>
           <span>80</span> / 100
@@ -57,7 +57,7 @@
       </div>
     </section>
     
-   <a href="#"> Continue </a>
+   <a class="btn" href="#"> Continue </a>
    
   </main>
  </div>
