--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <body>
     <div class="container">
       <aside>
-        <figure>
+        <div class="figure">
           <img class="user-img" src="images/image-jeremy.png" alt="User" />
           <figcaption>Report for</figcaption>
           <h1>Jeremy Robson</h1>
-        </figure>
+        </div>
         <nav>
           <ul class="navlist">
             <li id="daily">Daily</li>
